few more corrections
iPad display not responsive
View port not working correctly
and images not stacking on top of each other

--- a/framework/css/style.css
+++ b/framework/css/style.css
@@ -1,48 +1,84 @@
 body
 {
-
 	font-family: 'Lato', sans-serif;
 	color: #747784;
 	font-weight: 300;
 }
 
-.text-mute{
-
-	color:#7d97ad;
+body, html {
+  margin: auto;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.text-thin{
-
-	font-weight: 200;
-
+h1,h2,h3,h4,h5
+{
+	margin:0;
 }
 
-.title-name{
+img,embed,object,video
+{
+
+	max-width: 100%;
+}
+.text-mute
+{
+    color:#7d97ad;
+}
+
+.text-thin
+{
+    font-weight: 200;
+}
+
+.title-name
+{
 
 	font-size: 60px;
 	color:#2d3c49;
 }
-.projecttitle{
+
+.projecttitle
+{
 
 	font-size: 40px;
 	color:#2d3c49;
+	text-uppercase ;
 }
-.title-logo{
+
+.title-logo
+{
     color:#2db3e4;
 	margin-top: 20px;
 }
 
-.row{
+.row
+{
 	display: flex;
 }
 
-hr{
+hr
+{
 
 	height:4px;
 
 	background-color: #7d97ad;
 }
+
+.myWork
+
+{
+
+	textalign: center
+}
+
+
 .text-bold
 {
 	font-weight: bold;
+}
+
+header, nav, footer, section, article, div {
+  box-sizing: border-box;
 }
